// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VApp should allow a custom id 1`] = `
<div class="v-application v-theme--light v-layout"
     data-app="true"
     id="inspire"
>
  <div class="v-application__wrap">
  </div>
</div>
`;

exports[`VApp should match a snapshot 1`] = `
<div class="v-application v-theme--light v-layout"
     data-app="true"
>
  <div class="v-application__wrap">
  </div>
</div>
`;
